--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "morgan": "^1.9.0",
     "multer": "^1.3.1",
     "nodemailer": "^4.6.7",
-    "nodemailer-smtp-transport": "^2.7.4"
+    "nodemailer-smtp-transport": "^2.7.4",
+    "sanitizer": "^0.1.3"
   }
 }
